Adding SAML/One Time passcode configurations - phase 1

--- a/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
+++ b/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
@@ -168,6 +168,7 @@ CloudFoundryAccountSection_DIALOG_UNSAVE_TITLE=Unsaved Changes
 CloudFoundryAccountSection_LABEL_EMAIL=Email:
 CloudFoundryAccountSection_LABEL_ORG=Organization:
 CloudFoundryAccountSection_LABEL_PASSWORD=Password:
+CloudFoundryAccountSection_LABEL_PASSCODE=Passcode:
 CloudFoundryAccountSection_LABEL_PW_CHANGED=Password successfully changed.
 CloudFoundryAccountSection_LABEL_SPACE=Space:
 CloudFoundryAccountSection_LABEL_URL=URL:
