--- a/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
+++ b/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
@@ -197,6 +197,7 @@ CloudFoundryApplicationWizardPage_TITLE_APP_DETAIL=Application details
 CloudFoundryCloudSpaceWizardpage_TEXT_ORG_AND_SPACES=\ Organization and Spaces
 CloudFoundryCredentialsPart_TEXT_CREDENTIAL_WIZ_TITLE={0} Account
 CloudFoundryCredentialsPart_TEXT_REGISTER_BUTTON=&Register Account...
+SSO_SERVER=SSO server?
 CloudFoundryCredentialsPart_TEXT_VALIDATE_BUTTON=&Validate Account
 CloudFoundryCredentialsWizardPage_TEXT_CRENDENTIAL=\ Credentials
 CloudFoundryDecorator_SUFFIX_DEPLOYED=\ - Deployed
@@ -498,3 +499,5 @@ CloudFoundryServiceWizardPage_GETTING_AVAILABLE_SERVICES=Getting available servi
 CloudFoundryServiceWizard_NO_SERVICES_AVAILABLE_TITLE=No services are available
 CloudFoundryServiceWizard_NO_SERVICES_AVAILABLE_BODY=No services are currently available for this server instance.
 
+PASSCODE_PROMPT1 = Passcode: Get one at ''{0}''
+PASSCODE_PROMPT2 = Passcode: Get one at <a> ''{0}'' </a>
