Adding SAML/One Time passcode configurations - adding connect dialog

--- a/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
+++ b/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
@@ -168,7 +168,6 @@ CloudFoundryAccountSection_DIALOG_UNSAVE_TITLE=Unsaved Changes
 CloudFoundryAccountSection_LABEL_EMAIL=Email:
 CloudFoundryAccountSection_LABEL_ORG=Organization:
 CloudFoundryAccountSection_LABEL_PASSWORD=Password:
-CloudFoundryAccountSection_LABEL_PASSCODE=Passcode:
 CloudFoundryAccountSection_LABEL_PW_CHANGED=Password successfully changed.
 CloudFoundryAccountSection_LABEL_SPACE=Space:
 CloudFoundryAccountSection_LABEL_URL=URL:
@@ -294,6 +293,9 @@ CommandDefinitionActions_TEXT_CMD_DEF=Command Definitions
 CommandDefinitionActions_TEXT_CMD_DEFS=Command Definitions...
 ConnectCommand_JOB_CONN_SERVER=Connecting to server
 ConnectCommand_ERROR_CONNECT=Failed to connect to server: {0}
+ConnectSsoServerDialog_CONNECT_BUTTON=Connect
+ConnectSsoServerDialog_CONNECT_TITLE=Connect
+ConnectSsoServerDialog_Passcode_is_required=Passcode is required.
 DataToolsTunnelAction_ERROR_CREATE_PROFILE=Unable to create Data Tools profile for: {0}
 DataToolsTunnelAction_ERROR_CREATE_TUNNEL_FOR=Failed to create tunnel for: {0}
 DataToolsTunnelAction_PROP_REPLACE=replace with actual jar location
@@ -501,3 +503,5 @@ CloudFoundryServiceWizard_NO_SERVICES_AVAILABLE_BODY=No services are currently a
 
 PASSCODE_PROMPT1 = Passcode: Get one at ''{0}''
 PASSCODE_PROMPT2 = Passcode: Get one at <a> ''{0}'' </a>
+LABEL_PASSCODE = Passcode:
+
