--- a/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
+++ b/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
@@ -196,7 +196,7 @@ CloudFoundryApplicationWizardPage_TITLE_APP_DETAIL=Application details
 CloudFoundryCloudSpaceWizardpage_TEXT_ORG_AND_SPACES=\ Organization and Spaces
 CloudFoundryCredentialsPart_TEXT_CREDENTIAL_WIZ_TITLE={0} Account
 CloudFoundryCredentialsPart_TEXT_REGISTER_BUTTON=&Register Account...
-SSO_SERVER=SSO server?
+SSO_SERVER=Use a one-time password to login (SSO)?
 CloudFoundryCredentialsPart_TEXT_VALIDATE_BUTTON=&Validate Account
 CloudFoundryCredentialsWizardPage_TEXT_CRENDENTIAL=\ Credentials
 CloudFoundryDecorator_SUFFIX_DEPLOYED=\ - Deployed
