--- a/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
+++ b/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
@@ -501,7 +501,7 @@ CloudFoundryServiceWizardPage_GETTING_AVAILABLE_SERVICES=Getting available servi
 CloudFoundryServiceWizard_NO_SERVICES_AVAILABLE_TITLE=No services are available
 CloudFoundryServiceWizard_NO_SERVICES_AVAILABLE_BODY=No services are currently available for this server instance.
 
-PASSCODE_PROMPT1 = Passcode: Get one at ''{0}''
-PASSCODE_PROMPT2 = Passcode: Get one at <a> ''{0}'' </a>
+PASSCODE_PROMPT1 = Get one at ''{0}''
+PASSCODE_PROMPT2 = Get one at <a> ''{0}'' </a>
 LABEL_PASSCODE = Passcode:
 
