--- a/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
+++ b/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
@@ -503,5 +503,6 @@ CloudFoundryServiceWizard_NO_SERVICES_AVAILABLE_BODY=No services are currently a
 
 PASSCODE_PROMPT1 = Get one at ''{0}''
 PASSCODE_PROMPT2 = Get one at <a> ''{0}'' </a>
+PASSCODE_IS_NOT_SUPPORTED=SSO is not supported by this CF instance
 LABEL_PASSCODE = Passcode:
 
