SAML/One Time passcode - saving token - implementation

--- a/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
+++ b/org.eclipse.cft.server.ui/src/org/eclipse/cft/server/ui/internal/Messages.properties
@@ -403,6 +403,7 @@ ROUTES_SHOW_IN_USE=S&how In Use
 ROUTES_SHOW_REMOVED=Show Remo&ved
 ShowConsoleEditorAction_TEXT_SHOW_CONSOLE=Show Recent Logs
 SERVER_WIZARD_VALIDATOR_CLICK_TO_VALIDATE=Press 'Validate Account', 'Next', 'Finish' to validate credentials.
+SSO_SERVER_WIZARD_VALIDATOR_CLICK_TO_VALIDATE=Press 'Next', 'Finish' to validate credentials.
 ServerHandler_QUERY_RUNTIME_EXISTS=A runtime with the name ''{0}'' already exists. Replace the existing runtime?
 ServerHandler_QUERY_SERVER_EXISTS=A server with the name ''{0}'' already exists. Replace the existing server?
 ServiceCommandWizard_TITLE_CONFIG_CMD=Configure a service tunnel command
